--- a/settings.gradle
+++ b/settings.gradle
@@ -2,13 +2,13 @@ rootProject.name="rollbar-java-sdk"
 
 include ":rollbar-api",
         ":rollbar-java",
-        ":rollbar-android",
+//        ":rollbar-android",
         ":rollbar-web",
         ":rollbar-log4j2",
         ":rollbar-logback",
         ":examples:rollbar-java",
-        ":examples:rollbar-web",
-        ":examples:rollbar-android",
-        ":examples:rollbar-scala",
-        ":examples:rollbar-log4j2",
-        ":examples:rollbar-logback"
+//        ":examples:rollbar-web",
+//        ":examples:rollbar-android",
+//        ":examples:rollbar-scala",
+        ":examples:rollbar-log4j2"
+//        ":examples:rollbar-logback"
